tests/test_input_files/good/test_good_lambda_4.punkt
function f <> -> int {
	return 0.
}

main {
	var g = f.
	print g().
}
