tests/test_input_files/bad/test_bad_return_stmt_7.punkt
function f <> -> int {
	if true {
		var x = 1.
	} else {
		return 0.
	}
}

main {
	f().
}
